fix over-reaching selector messing up image alignment.

--- a/src/main/resources/scss/profile/components/_profile-cards.scss
+++ b/src/main/resources/scss/profile/components/_profile-cards.scss
@@ -130,7 +130,7 @@
 			padding-bottom: 0;
 			margin: 0;
 		}
-		img {
+		& > img {
 			position: absolute;
 			top: 0;
 			left: 0;
